refactor home.html

--- a/templates/content/home.html
+++ b/templates/content/home.html
@@ -4,13 +4,13 @@
 				<div id="timer" name="timer"><p class="clock">00:00:00.00</p></div>
 				<div id="buttons" name="buttons" class="d-flex flex-row justify-content-center align-content-center">
 						<div class="d-flex flex-column justify-content-end">
-							<input id="start-button" class="btn btn-primary" type="button" style="display: inline-block" onclick="start()" value="Start">
-							<input id="continue-button" class="btn btn-primary" type="button" style="display: none" onclick="continueTimer()" value="Continue">
-							<input id="pause-button" class="btn btn-primary" type="button" style="display: none" onclick="pause()" value="Pause">
+							<input id="start-button" class="btn btn-primary" type="button" style="display: inline-block" value="Start">
+							<input id="continue-button" class="btn btn-primary" type="button" style="display: none" value="Continue">
+							<input id="pause-button" class="btn btn-primary" type="button" style="display: none" value="Pause">
 						</div>
 						<div class="d-flex flex-column">
-							<input id="stop-button" class="btn btn-primary" type="button" style="display: none" onclick="stop()" value="Stop">
-							<input id="reset-button" class="btn btn-primary" type="button" style="display: none" onclick="reset()" value="Reset">
+							<input id="stop-button" class="btn btn-primary" type="button" style="display: none" value="Stop">
+							<input id="reset-button" class="btn btn-primary" type="button" style="display: none" value="Reset">
 						</div>
 				</div> 
 			</div>
@@ -89,222 +89,5 @@
 
 {{define "script"}}
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-	<script>
-		//'use strict'
-
-		function padTime(ms) {
-			if (ms) {
-				paddedTime = String(ms).padStart(2, '0');
-				return paddedTime;
-			} else {
-				return "00";
-			}		
-		}
-		
-		function displayTime(ms) {
-			hr = Math.floor(ms/3600000);
-			min = Math.floor(ms/60000) % 60;
-			sec = Math.floor(ms/1000) % 60;
-			milliSec = Math.floor(ms/10) % 100;
-			hrPad = padTime(hr)
-			minPad = padTime(min)
-			secPad = padTime(sec)
-			milliSecPad = padTime(milliSec)
-
-			return hrPad + ":" + minPad + ":" + secPad + "." + milliSecPad
-		}
-
-		var dispElapsed
-		var msElapsed
-
-		function startTimer(startTime) {
-			msElapsed = Date.now() - startTime;
-			dispElapsed = displayTime(msElapsed);
-			document.querySelector('.clock').textContent = dispElapsed;
-		}
-
-		function setTimeRecord(timeValue) {
-			let timeRecordInput = document.querySelector("input[id='time-record']");
-			timeRecordInput.value = timeValue;
-		}
-		
-		function hideAllElements() {
-			document.querySelector('#start-button').style.display = "none";
-			document.querySelector('#pause-button').style.display = "none";
-			document.querySelector('#continue-button').style.display = "none";
-			document.querySelector('#stop-button').style.display = "none";			
-			document.querySelector('#reset-button').style.display = "none";			
-			document.querySelector('#reset-button').style.display = "none";			
-			document.querySelector('#form-div').style.display = "none";
-			document.querySelector('#warning-msg').style.display = "none";
-			document.querySelector('#custom-time-container').style.display = "none";
-		}
-		
-		function start(msElapsed = 0) {
-			startTime = Date.now() - msElapsed;
-			createClock = setInterval(startTimer, 10, startTime);
-			hideAllElements()
-			document.querySelector('#pause-button').style.display = "inline-block";
-			document.querySelector('#stop-button').style.display = "inline-block";
-		}
-
-		function stop() {
-			clearInterval(createClock);
-			setFormDateTime();
-			hideAllElements();
-			document.querySelector('#reset-button').style.display = "inline-block";
-			document.querySelector('#form-div').style.display = "inline-block";
-			setTimeRecord(dispElapsed);
-		}
-		
-		function reset() {
-			msElapsed = 0
-			document.querySelector('.clock').textContent = "00:00:00.00";
-			hideAllElements();
-			document.querySelector('#start-button').style.display = "inline-block";
-		}
-
-		function pause() {
-			stop();
-			hideAllElements();
-			document.querySelector('#form-div').style.display = "inline-block";
-			document.querySelector('#continue-button').style.display = "inline-block";
-			document.querySelector('#stop-button').style.display = "inline-block";
-		}
-
-		function continueTimer() {
-			start(msElapsed);
-			hideAllElements();
-			document.querySelector('#pause-button').style.display = "inline-block";
-			document.querySelector('#stop-button').style.display = "inline-block";
-		}
-
-		function setFormDateTime() {
-			let datetimeNow = new Date().toISOString().slice(0,19);
-			let [dateStr, timeStr] = datetimeNow.split("T");
-			
-			let formDate = document.querySelector("input[id='form-date']");
-			let formTime = document.querySelector("input[id='form-time']");
-			formDate.value = dateStr;
-			formTime.value = timeStr;
-		}
-
-		// check character input
-
-		function checkChar(char, regExp) {
-			return regExp.test(char);  
-		}
-
-		function checkNumRange(inputVal, min, max) {
-			let inputNum = Number(inputVal);
-			return (inputNum >= Number(min) && inputNum <= Number(max));
-		}
-
-		function checkInput(event) {
-			let inputVal = event.data;
-			let inputType = event.inputType;
-			const isNum = checkChar(inputVal, /\d/);
-		
-			if (isNum) {
-				event.preventDefault();
-				
-				let currentInputBoxVal = String(event.target.value);
-
-				if (event.target.selectionStart === 0) {
-					event.target.value = "0" + String(inputVal);
-				} else if (event.target.selectionStart === 1) {
-					event.target.value = currentInputBoxVal.substr(0,1) + String(inputVal);
-				} else if (event.target.selectionStart === 2) {    
-					if (currentInputBoxVal.startsWith("0")) {
-						// move current number over and add new value
-						event.target.value = currentInputBoxVal.substr(1) + String(inputVal);
-					} else {
-						return;
-					}      
-				}
-
-				let inRange = checkNumRange(event.target.value, event.target.min, event.target.max);
-				
-				if (!inRange) {
-					let errorMsg = document.querySelector('#errorMsg');
-					errorMsg.innerText = `Please enter a number from ${event.target.min} to ${event.target.max}`;
-					errorMsg.style.display = 'inline-block';
-				} else {
-					errorMsg.style.display = 'none';
-				}
-				
-			} else if (inputType.includes('delete')) {
-				// allow deletion
-				return;
-			} else {
-				event.preventDefault();
-			}
-		
-		}
-
-		const manualTimeDiv = document.querySelector('#custom-time-input');
-		const timeInputElements = manualTimeDiv.querySelectorAll('div > input');
-
-		timeInputElements.forEach((item) => {
-			let inputBox = document.querySelector(`#${item.id}`)
-			inputBox.addEventListener('mouseup', (event) => {event.target.select()});
-			inputBox.addEventListener('beforeinput', checkInput);
-		})
-
-		function getManualTimeValues(manualTimeInputElements) {
-			let timeArray = [];
-			
-			manualTimeInputElements.forEach((item) => {
-				timeArray.push(item.value);
-			})
-			
-			return timeArray;
-		}
-
-		function formatManualTimeValues(manualTimeInputElements) {
-			let [hh, mm, ss, ms] = getManualTimeValues(manualTimeInputElements);
-			return `${hh}:${mm}:${ss}.${ms}`;
-		}
-
-		const submitBtn = document.querySelector('#submit-btn');
-		submitBtn.addEventListener('click', () => {
-			let stopwatchTime = document.querySelector('.clock').textContent;
-			let manualTimeValues = formatManualTimeValues(timeInputElements);
-
-			if (stopwatchTime != "00:00:00.00" && manualTimeValues != "00:00:00.00") {
-				document.querySelector('#warning-msg').style.display = "inline-block";
-			} else if (stopwatchTime === "00:00:00.00" && manualTimeValues != "00:00:00.00") {
-				setTimeRecord(manualTimeValues);
-				document.querySelector('#time-record-form').submit();
-			} else {
-				document.querySelector('#time-record-form').submit();
-			}
-
-		})
-
-		const overrideBtn = document.querySelector('#confirm-override-btn');
-		overrideBtn.addEventListener('click', () => {
-			let manualTimeValues = formatManualTimeValues(timeInputElements);
-			setTimeRecord(manualTimeValues);
-			document.querySelector('#time-record-form').submit();
-		})
-
-		const useStopwatchTimeBtn = document.querySelector('#use-stopwatch-time-btn');
-		useStopwatchTimeBtn.addEventListener('click', () => {
-			document.querySelector('#time-record-form').submit();
-		})
-
-		const addCustomTimeBtn = document.querySelector('#add-custom-time-btn');
-		addCustomTimeBtn.addEventListener('click', () => {
-			document.querySelector('#custom-time-container').style.display = "inline-block";
-			document.querySelector('#close-custom-time-btn').style.display = "inline-block";
-		})
-
-		const closeCustomTimeBtn = document.querySelector('#close-custom-time-btn');
-		closeCustomTimeBtn.addEventListener('click', () => {
-			document.querySelector('#custom-time-container').style.display = "none";
-			document.querySelector('#close-custom-time-btn').style.display = "none";
-		})
-
-    </script>
+	<script src="./static/script/index.js" type="module"></script>
 {{end}}
